--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "db:generate": "drizzle-kit migrate",
+    "db:migrate": "drizzle-kit generate",
     "db:seed": "node --env-file .env --experimental-strip-types --no-warnings src/db/seed.ts",
     "start": "node --env-file .env --experimental-strip-types --no-warnings src/server.ts",
     "dev": "node --env-file .env --experimental-strip-types --no-warnings --watch src/server.ts"
